Fix dark mode colors in the misc menu

--- a/dark.css
+++ b/dark.css
@@ -32,3 +32,7 @@ td#event-text, td#event-image {
 div.outer-venue-logo {
   background: black !important;
 }
+
+div#meta-hidden div.export {
+  background: linear-gradient(to bottom, #303030 0%, #404040 45px);
+}
